mic/deployments/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: blog-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: blog-virtual-service
spec:
  gateways:
    - blog-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: "/api.protobuf.blog.v1.BlogService"
      route:
        - destination:
            host: blog-server.default.svc.cluster.local
            port:
              number: 50050
    - match:
        - uri:
            prefix: "/api.rest.blog.v1"
      route:
        - destination:
            host: blog-server.default.svc.cluster.local
            port:
              number: 8050
      corsPolicy:
        allowOrigins:
          - exact: "*"
        allowMethods:
          - "POST"
          - "GET"
          - "PUT"
          - "PATCH"
          - "DELETE"
          - "OPTIONS"
          - "HEAD"
        allowHeaders:
          - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-virtual-service
spec:
  gateways:
    - mesh
  hosts:
    - user-server.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: user-server.default.svc.cluster.local
            port:
              number: 50051
            subset: v1
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: user-destination-rule
spec:
  host: user-server.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth-virtual-service
spec:
  gateways:
    - mesh
  hosts:
    - auth-server.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: auth-server.default.svc.cluster.local
            port:
              number: 50054
            subset: v1
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: auth-destination-rule
spec:
  host: auth-server.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
